--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "omni-tempore",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cwochris.github.io/omni-tempore",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
